import constants

from game.casting.cast import Cast
from game.casting.red_score import RedScore
from game.casting.green_score import GreenScore
from game.casting.red_snake import RedSnake
from game.casting.green_snake import GreenSnake
from game.scripting.script import Script
from game.scripting.control_actors_action import ControlActorsAction
from game.scripting.move_actors_action import MoveActorsAction
from game.scripting.handle_collisions_action import HandleCollisionsAction
from game.scripting.draw_actors_action import DrawActorsAction
from game.directing.director import Director
from game.services.keyboard_service import KeyboardService
from game.services.video_service import VideoService
from game.shared.color import Color
from game.shared.point import Point


def main():
    
    # create the cast
    cast = Cast()
    cast.add_actor("snakes", RedSnake())        # an instance of class RedSnake derived from Snake is created
    cast.add_actor("snakes", GreenSnake())      # an instance of class GreenSnake derived from Snake is created
    cast.add_actor("scores", RedScore())        # an instance of class RedScore derived from Score is created
    cast.add_actor("scores", GreenScore())      # an instance of class GreeScore derived from Score is created
   
    # start the game
    keyboard_service = KeyboardService()
    video_service = VideoService()

    script = Script()
    script.add_action("input", ControlActorsAction(keyboard_service))
    script.add_action("update", MoveActorsAction())
    script.add_action("update", HandleCollisionsAction())
    script.add_action("output", DrawActorsAction(video_service))
    
    director = Director(video_service)
    director.start_game(cast, script)


if __name__ == "__main__":
    main()